--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,13 @@
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
 		"typeinfo": "cpp",
-		"list": "cpp"
+		"list": "cpp",
+		"compare": "cpp",
+		"concepts": "cpp",
+		"ctime": "cpp",
+		"map": "cpp",
+		"set": "cpp",
+		"iomanip": "cpp",
+		"ranges": "cpp"
 	}
 }
